# Mlops_jaaa

./: README.md  data_exploration.py
MLops_JAAA/: .dockerignore  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt
MLops_JAAA/.dvc/: config
MLops_JAAA/.github/workflows/: test.yaml
MLops_JAAA/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
MLops_JAAA/docs/: mkdocs.yaml
MLops_JAAA/docs/source/: index.md
MLops_JAAA/misc/: lstm.py  nn.py
MLops_JAAA/models/: lstm_model.pth  model.pth
MLops_JAAA/notebooks/: data_manipulation.ipynb
MLops_JAAA/random_scripts/: stocks.csv
MLops_JAAA/stock_predictions/: __init__.py  lstm_predict_model.py  lstm_train_model.py  lstm_train_model_with_logger.py  lstm_train_profile.prof  lstm_train_profile_analysis.py  my_logger.py  train_model.py
MLops_JAAA/stock_predictions/data/: lstm_make_dataset.py  make_dataset.py
MLops_JAAA/stock_predictions/models/: lstm_model.py  model.py
MLops_JAAA/wandb/run-20240617_121023-lux39qyf/: run-lux39qyf.wandb
MLops_JAAA/wandb/run-20240617_121023-lux39qyf/files/: config.yaml
MLops_JAAA/wandb/run-20240617_121049-tkl7qxqt/: run-tkl7qxqt.wandb
MLops_JAAA/wandb/run-20240617_121049-tkl7qxqt/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
